# deckdot

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  commands.yaml  components.json  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js  vite.mobile.config.js
.github/workflows/: build.yml
mobile/: App.svelte  app.css  index.html  main.js
src/: App.svelte  Commands.svelte  ServerControl.svelte  Settings.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  database.rs  main.rs  server.rs  system_commands.rs  windows_focus.rs
src/lib/: utils.ts
src/lib/components/ui/select/: index.ts  select.svelte
